#/********************************************************************************************************************** 
# * THE OMEGA LIB PROJECT
# *---------------------------------------------------------------------------------------------------------------------
# * Copyright 2010								Electronic Visualization Laboratory, University of Illinois at Chicago
# * Authors:										
# *  [Author]									[Mail]
# *---------------------------------------------------------------------------------------------------------------------
# * [LICENSE NOTE]
# *---------------------------------------------------------------------------------------------------------------------
# * [SUMMARY OF FILE CONTENTS]
# *********************************************************************************************************************/

#######################################################################################################################
# Compile definitions
ADD_DEFINITIONS( )

#######################################################################################################################
# Source files
SET( srcs 
        odemo.cpp
        )
    
#######################################################################################################################
# Headers
SET( headers 
        ) 
        
#######################################################################################################################
# Setup compile info
ADD_EXECUTABLE( odemo ${srcs} ${headers})

#######################################################################################################################
# Setup link info.
TARGET_LINK_LIBRARIES( odemo
    omega
)


